# ai-scraper-mail-spoon

./: .env.example  .gitignore  README.md  official_languages_by_country.csv  pyproject.toml  requirements.txt  start.bat
data/: sample_organizations.csv
email_templates/: README.md  outreach_ar.html  outreach_bn.html  outreach_cs.html  outreach_de.html  outreach_en.html  outreach_es.html  outreach_fr.html  outreach_he.html  outreach_hi.html  outreach_id.html  outreach_it.html  outreach_ja.html  outreach_ko.html  outreach_languages.md  outreach_ms.html  outreach_ne.html  outreach_nl.html  outreach_pl.html  outreach_pt.html  outreach_ru.html  outreach_sk.html  outreach_th.html  outreach_tr.html  outreach_uk.html  outreach_ur.html  outreach_vi.html  outreach_zh.html  signature.html
prompts/: agent_rules.md  classify_organization.md  write_outreach_email.md
src/infinity_outreach/: __init__.py  autorun.py  campaign.py  cli.py  compliance.py  config.py  constants.py  db.py  discovery.py  email_extractor.py  email_sender.py  email_verify.py  email_writer.py  models.py  ollama_client.py  optout_scanner.py  osm_discovery.py  reporting.py  seed.py  website_enricher.py
tests/: conftest.py  test_compliance.py  test_constants.py  test_email_extractor.py
tools/: build_email_templates.py
web/: __init__.py  app.py
web/static/: app.js  style.css
web/templates/: base.html  dashboard.html  drafts.html  logs.html  organizations.html  settings.html
