[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinity-outreach-agent"
version = "0.2.0"
description = "Local-first outreach engine that discovers religious organizations, enriches public contact data, drafts bilingual outreach emails for the Infinity Faith app, and (optionally) sends them through your own mailbox under strict rate limits and an opt-out list."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Infinity Faith" }]
keywords = ["outreach", "religious-organizations", "ollama", "hermes", "openclaw"]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "SQLAlchemy>=2.0.25",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "openai>=1.30.0",
    "pandas>=2.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
infinity-outreach = "infinity_outreach.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
